feat: update response for addOrg and openAPI spec file
